src-tauri/tests/snapshots/pipeline_scenarios__asst_thinking_historical_has_duration_without_streaming_flag.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: msg-1
  content_length: 1
  content:
    - type: reasoning
      text_length: 17
      text_preview: from last session
      streaming: ~
      duration_ms: 5000
  status:
    type: complete
    reason: stop
  streaming: ~
