src-tauri/tests/snapshots/pipeline_scenarios__asst_thinking_historical_without_duration.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: msg-1
  content_length: 1
  content:
    - type: reasoning
      text_length: 6
      text_preview: legacy
      streaming: ~
  status:
    type: complete
    reason: stop
  streaming: ~
