src-tauri/tests/snapshots/pipeline_scenarios__asst_thinking_live_just_finished.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: msg-1
  content_length: 1
  content:
    - type: reasoning
      text_length: 19
      text_preview: figured it out fast
      streaming: false
      duration_ms: 3200
  status:
    type: complete
    reason: stop
  streaming: ~
