src-tauri/tests/snapshots/pipeline_scenarios__asst_thinking_streaming_in_progress.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: msg-1
  content_length: 1
  content:
    - type: reasoning
      text_length: 14
      text_preview: working it out
      streaming: true
  status:
    type: complete
    reason: stop
  streaming: ~
