src-tauri/tests/snapshots/pipeline_scenarios__asst_unknown_error_prefers_message_text.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: msg-1
  content_length: 1
  content:
    - type: text
      text: "API Error: The socket connection was closed unexpe... `verbose: true` in the second argument to fetch()[len:134]"
  status:
    type: complete
    reason: stop
  streaming: ~
